[package]
name = "artichoke-backend"
version = "0.22.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
description = "Embeddable VM implementation for Artichoke Ruby"
keywords = ["artichoke", "artichoke-ruby", "mruby", "ruby"]
categories = ["api-bindings"]
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
artichoke-core = { version = "0.13.0", path = "../artichoke-core" }
artichoke-load-path = { version = "0.1.0", path = "../artichoke-load-path", default-features = false }
bstr = { version = "1.2.0", default-features = false, features = ["alloc"] }
intaglio = { version = "1.7.0", default-features = false, features = ["bytes"] }
mezzaluna-type-registry = { version = "1.0.1", path = "../mezzaluna-type-registry" }
once_cell = "1.12.0"
onig = { version = "6.4.0", optional = true, default-features = false }
posix-space = "1.0.0"
qed = "1.3.0"
regex = "1.7.0"
scolapasta-aref = { version = "0.1.0", path = "../scolapasta-aref" }
scolapasta-int-parse = { version = "0.2.2", path = "../scolapasta-int-parse", default-features = false }
scolapasta-path = { version = "0.5.0", path = "../scolapasta-path" }
scolapasta-string-escape = { version = "0.3.0", path = "../scolapasta-string-escape", default-features = false }
spinoso-array = { version = "0.9.0", path = "../spinoso-array", default-features = false }
spinoso-env = { version = "0.2.0", path = "../spinoso-env", optional = true, default-features = false }
spinoso-exception = { version = "0.1.0", path = "../spinoso-exception" }
spinoso-math = { version = "0.3.0", path = "../spinoso-math", optional = true, default-features = false }
spinoso-random = { version = "0.3.0", path = "../spinoso-random", optional = true }
spinoso-regexp = { version = "0.5.0", path = "../spinoso-regexp", optional = true, default-features = false }
spinoso-securerandom = { version = "0.2.0", path = "../spinoso-securerandom", optional = true }
spinoso-string = { version = "0.21.0", path = "../spinoso-string", features = ["always-nul-terminated-c-string-compat"] }
spinoso-symbol = { version = "0.3.0", path = "../spinoso-symbol" }
spinoso-time = { version = "0.7.1", path = "../spinoso-time", features = ["tzrs"], default-features = false, optional = true }

[dev-dependencies]
quickcheck = { version = "1.0.3", default-features = false }

[build-dependencies]
bindgen = { version = "0.65.1", default-features = false, features = ["runtime"] }
cc = { version = "1.0.72", features = ["parallel"] }

[features]
default = [
  "core-full",
  "stdlib-full",
]

core-full = [
  "core-env",
  "core-env-system",
  "core-math",
  "core-math-full",
  "core-random",
  "core-regexp",
  "core-regexp-oniguruma",
  "core-time",
]
core-env = ["dep:spinoso-env"]
core-env-system = ["core-env", "spinoso-env?/system-env"]
core-math = ["dep:spinoso-math"]
core-math-full = ["core-math", "spinoso-math?/full"]
core-random = ["dep:spinoso-random"]
core-regexp = ["dep:spinoso-regexp"]
core-regexp-oniguruma = ["core-regexp", "spinoso-regexp?/oniguruma", "dep:onig"]
core-time = ["dep:spinoso-time"]

load-path-native-file-system-loader = ["artichoke-load-path/native-file-system-loader"]
load-path-rubylib-native-file-system-loader = ["load-path-native-file-system-loader", "artichoke-load-path/rubylib-native-file-system-loader"]

output-strategy-capture = []
output-strategy-null = ["output-strategy-capture"]

stdlib-full = [
  "stdlib-abbrev",
  "stdlib-base64",
  "stdlib-cmath",
  "stdlib-delegate",
  "stdlib-forwardable",
  "stdlib-json",
  "stdlib-monitor",
  "stdlib-ostruct",
  "stdlib-securerandom",
  "stdlib-set",
  "stdlib-shellwords",
  "stdlib-strscan",
  "stdlib-time",
  "stdlib-uri",
]
stdlib-abbrev = []
stdlib-base64 = []
stdlib-cmath = ["core-math"]
stdlib-delegate = []
stdlib-forwardable = []
stdlib-json = []
stdlib-monitor = []
stdlib-ostruct = []
stdlib-securerandom = ["dep:spinoso-securerandom"]
stdlib-set = []
stdlib-shellwords = []
stdlib-strscan = []
stdlib-time = []
stdlib-uri = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
