[package]
name = "artichoke-core"
version = "0.9.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
edition = "2018"
description = "Core traits for implementing an Artichoke Ruby interpreter"
repository = "https://github.com/artichoke/artichoke"
readme = "README.md"
license = "MIT"
license-file = "../LICENSE"
keywords = ["artichoke", "artichoke-ruby", "ruby"]
categories = ["data-structures", "no-std", "rust-patterns"]

[dependencies]

[features]
default = ["std"]
# By default, `artichoke-core` is `no_std` + `alloc`. This feature enables some
# APIs that depend on `OsStr` and `Path`, as well as some `std::error::Error`
# impls.
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
