[package]
name = "artichoke-core"
version = "0.12.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
description = "Core traits for implementing an Artichoke Ruby interpreter"
keywords = ["artichoke", "artichoke-ruby", "ruby"]
categories = ["data-structures", "no-std", "rust-patterns"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

[dependencies]

[features]
default = ["std"]
# By default, `artichoke-core` is `no_std` + `alloc`. This feature enables some
# APIs that depend on `OsStr` and `Path`, as well as some `std::error::Error`
# impls.
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
