[package]
name = "artichoke-frontend"
version = "0.1.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
edition = "2018"

[dependencies]
bstr = "0.2"
rustyline = "5.0.3"
structopt = "0.3"

[dependencies.artichoke-backend]
path = "../artichoke-backend"

[dependencies.artichoke-core]
path = "../artichoke-core"
