[package]
name = "artichoke-frontend"
version = "0.1.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
edition = "2018"

[dependencies]
ansi_term = "0.12"
bstr = "0.2"
rustyline = "6"
structopt = "0.3"

[dependencies.artichoke-backend]
path = "../artichoke-backend"

[dependencies.artichoke-core]
path = "../artichoke-core"
