[package]
name = "artichoke-load-path"
version = "0.1.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
edition = "2021"
description = "Source and extension loaders for a managing a Ruby $LOAD_PATH"
repository = "https://github.com/artichoke/artichoke"
readme = "README.md"
license = "MIT"
keywords = ["artichoke", "artichoke-ruby", "load-path", "ruby"]
categories = ["filesystem"]

[dependencies]
same-file = { version = "1, >= 1.0.6", optional = true }

[features]
default = ["native-file-system-loader", "rubylib-native-file-system-loader"]
native-file-system-loader = ["same-file"]
rubylib-native-file-system-loader = ["native-file-system-loader"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
