[package]
name = "artichoke-readline"
version = "1.1.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
description = "Helpers for interacting with GNU Readline configuration"
keywords = ["artichoke", "artichoke-ruby", "inputrc", "readline"]
categories = ["command-line-utilities"]
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
posix-space = "1.0.3"

[dependencies.bstr]
version = "1.2.0"
default-features = false

[dependencies.rustyline]
version = "13.0.0"
optional = true
default-features = false

[target.'cfg(windows)'.dependencies]
known-folders = "1.0.0"

[features]
default = ["rustyline"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
