[package]
name = "artichoke-vfs"
version = "0.5.0-alpha"
authors = [
  "Isobel Redelmeier <iredelmeier@gmail.com>",
  "Ryan Lopopolo <rjl@hyperbo.la>"
]
edition = "2018"
description = "Fake implementation of a Unix file system for Artichoke Ruby"
repository = "https://github.com/artichoke/artichoke"
readme = "README.md"
license = "MIT"
keywords = ["artichoke", "filesystem", "testing", "virtual", "fake"]
categories = ["development-tools::testing", "filesystem"]

[lib]
bench = false
doctest = false
test = false

[[test]]
name = "fs"

[dependencies.rand]
version = "0.7"
