[package]
name = "artichoke-wasm"
version = "0.1.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
edition = "2018"

[dependencies]
cfg-if = "0.1.2"
js-sys = "0.3"
wasm-bindgen = "0.2"

[dependencies.artichoke-backend]
path = "../artichoke-backend"

[dependencies.web-sys]
version = "0.3.25"
features = [ "console", "Document", "Element", "EventTarget", "HtmlTextAreaElement", "Window" ]

[build-dependencies]
rustc_version = "0.2.3"
