[package]
name = "foolsgold"
version = "0.1.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
edition = "2018"

[[bin]]
name = "foolsgold"
# Disable doctests because doctests execute from the crate directory instead of
# the workspace root. This causes the paths specified in RustEmbed derives to
# not resolve, which panics.
# TODO: Remove this workaround once this PR to interpolate env vars in paths is
# merged: https://github.com/pyros2097/rust-embed/pull/59
doctest = false

[dependencies]
env_logger = "0.6.1"
log = "0.4.6"
ref_thread_local = "0.0"
rocket = "0.4.0"

[dependencies.mruby]
path = "../mruby"

[dependencies.mruby-gems]
path = "../mruby-gems"

[dependencies.nemesis]
path = "../nemesis"

[dependencies.rust-embed]
version = "4.3.0"
features = ["debug-embed"]

[dependencies.uuid]
version = "0.7"
features = ["v4"]
