[package]
name = "foolsgold"
version = "0.1.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
edition = "2018"

[[bench]]
name = "nemesis_vs_thin"
harness = false

[dependencies]
env_logger = "0.6.1"
log = "0.4.6"

[dependencies.mruby]
path = "../mruby"

[dependencies.mruby-gems]
path = "../mruby-gems"

[dependencies.nemesis]
path = "../nemesis"

[dependencies.rust-embed]
version = "4.5.0"
features = ["interpolate-folder-path"]

[dependencies.uuid]
version = "0.7"
features = ["v4"]

[dev-dependencies]
criterion = "0.2.11"
http = "*"
hyper = "0.12"
futures = "0.1.27"
tokio = "0.1.21"
