[package]
name = "mezzaluna-feature-loader"
version = "0.4.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
edition = "2021"
rust-version = "1.60.0"
description = "Source and extension loaders for a managing a Ruby $LOAD_PATH"
repository = "https://github.com/artichoke/artichoke"
readme = "README.md"
license = "MIT"
keywords = ["artichoke", "artichoke-ruby", "load-path", "ruby"]
categories = ["filesystem"]

[dependencies]
same-file = { version = "1.0.6", optional = true }

[features]
default = ["disk", "rubylib"]
disk = ["same-file"]
rubylib = ["disk"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
